build-release/zlib.x86_64/configure.log
--------------------
./configure --static --prefix=/Users/olive/Documents/SourceCode/aria2/build-release/x86_64
Wed 10 Feb 2016 22:44:21 CET
=== ztest45634.c ===
extern int getchar();
int hello() {return getchar();}
===
cc -c ztest45634.c
... using cc

Checking for obsessive-compulsive compiler options...
=== ztest45634.c ===
int foo() { return 0; }
===
cc -c -mmacosx-version-min=10.7 -Os ztest45634.c

Building static library libz.a version 1.2.8 with cc.

=== ztest45634.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
cc -c -mmacosx-version-min=10.7 -Os -D_LARGEFILE64_SOURCE=1 ztest45634.c
ztest45634.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/usr/include/sys/_types/_off_t.h:30:25: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest45634.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
cc -mmacosx-version-min=10.7 -Os -o ztest45634 ztest45634.c
Checking for fseeko... Yes.

=== ztest45634.c ===
#include <string.h>
#include <errno.h>
int main() { return strlen(strerror(errno)); }
===
cc -mmacosx-version-min=10.7 -Os -o ztest45634 ztest45634.c
Checking for strerror... Yes.

=== ztest45634.c ===
#include <unistd.h>
int main() { return 0; }
===
cc -c -mmacosx-version-min=10.7 -Os ztest45634.c
Checking for unistd.h... Yes.

=== ztest45634.c ===
#include <stdarg.h>
int main() { return 0; }
===
cc -c -mmacosx-version-min=10.7 -Os ztest45634.c
Checking for stdarg.h... Yes.

=== ztest45634.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
cc -c -mmacosx-version-min=10.7 -Os ztest45634.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest45634.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
cc -mmacosx-version-min=10.7 -Os -o ztest45634 ztest45634.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest45634.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
cc -c -mmacosx-version-min=10.7 -Os ztest45634.c
Checking for return value of vsnprintf()... Yes.

ALL = static
AR = ar
ARFLAGS = rc
CC = cc
CFLAGS = -mmacosx-version-min=10.7 -Os
CPP = cc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS = -Wl,-dead_strip
LDSHARED = cc
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -mmacosx-version-min=10.7 -Os
SHAREDLIB =
SHAREDLIBM =
SHAREDLIBV =
STATICLIB = libz.a
TEST = all teststatic
VER = 1.2.8
Z_U4 =
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /Users/olive/Documents/SourceCode/aria2/build-release/x86_64
sharedlibdir = ${libdir}
uname = Darwin 13.4.0
--------------------


